[LFTUI-7] correcting spacing issues on dashboard

--- a/src/sass/views/_dashboard.sass
+++ b/src/sass/views/_dashboard.sass
@@ -34,7 +34,7 @@
     +outer-container
 
     .bottom
-      padding: 5px 0
+      padding: 10px 0
 
     .section-top
       border-radius: 2px
@@ -45,6 +45,9 @@
       font-size: 0.75em
       line-height: 2.5em
       border-bottom: 2px solid $dark-gray
+
+  .device-list.directive .list-container
+    margin: 0
 
   .device-section-container .registration-container
     border: 1px solid darken(white, 8)
@@ -72,6 +75,9 @@
     .device-creator.directive .actions
       overflow: hidden
       margin: 0
+
+  .track-upload-form.directive .input-container
+    margin: 0
 
   &[active="overview"]
     .track-section-container, 
